fix(css): logo and user overlapped in XS mobile resolution

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,4 @@ ul {
   --darker-green: #3A4D39;
   --white: #FFFFFF;
   --black: #000000;
-
-  max-width: 1920px;
 }
